--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -13,18 +13,33 @@ header
 .main-nav
 {
     text-align: center;
-    margin: auto;
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 a{
-
     background-color: #6261D8;
     padding: 15px;
-    margin: -5px;
+    margin: -2px;
     text-decoration: none;
     color: white;
     width: 100px;
 }
 a:hover
 {
-    text-underline-color: #33FF00;
+    border-bottom: 2px solid greenyellow;
+}
+a:active
+{
+    background-color: #3B32DC;
+}
+svg
+{
+    width: 40px;
+    height: 40px;
+}
+.icon
+{
+    margin-left: auto;
 }
