--- a/css-generated/style.css
+++ b/css-generated/style.css
@@ -31,11 +31,15 @@ span {
   display: inline-block;
 }
 
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
 #disclaimer-banner {
   position: absolute;
   display: flex;
   width: 100%;
-  height: 4rem;
+  padding: 1rem 1.2rem;
   justify-content: center;
   align-items: center;
   background-color: #fb4;
