--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,13 +1,17 @@
 @use 'reset';
-@use 'theme';
+@use 'theme' as *;
 @use 'mixins-general';
 @use 'baseline';
+
+body {
+    font-family: $fontstack;
+}
 
 #disclaimer-banner {
     position: absolute;
     display: flex;
     width: 100%;
-    height: 4rem;
+    padding: 1rem 1.2rem;
     justify-content: center;
     align-items: center;
     background-color: #fb4;
