--- a/public/CSS/index.css
+++ b/public/CSS/index.css
@@ -1,6 +1,7 @@
 body
 {
     margin:0;
+    overflow: hidden;
 }
 header
 {
@@ -9,23 +10,66 @@ header
     margin: auto;
     padding: 25px;
     background-color: #29295C;
+
 }
+
+#logo {
+    display: flex;
+    margin-right: auto;
+
+
+
+}
+
+.material-icons.md-virus {
+
+    color: greenyellow;
+    font-size: 60px;
+    margin-right: auto;
+    margin-top: 15px;
+}
+
+.material-icons.md-cart {
+
+    font-size: 60px;
+    margin-left: auto;
+    margin-right: 60px;
+    color: white;
+
+}
+
+.vstack {
+    color: white;
+    font-size: 36px;
+    margin-left: 5px;
+}
+
+
 .main-nav
 {
     text-align: center;
+    align-items: center;
     margin-top: 20px;
     width: 100%;
+    height: 100px;
     display: flex;
     justify-content: center;
+
 }
-a{
+a.menubar {
     background-color: #6261D8;
-    padding: 15px;
+    padding: 30px;
     margin: -2px;
     text-decoration: none;
     color: white;
-    width: 100px;
+    width: 300px;
+    font-family: Arial;
+    font-size: 25px;
+    font-weight: bold;
+
+
 }
+
 a:hover
 {
     border-bottom: 2px solid greenyellow;
@@ -38,8 +82,4 @@ svg
 {
     width: 40px;
     height: 40px;
-}
-.icon
-{
-    margin-left: auto;
 }
