--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,13 +16,21 @@ body {
     align-items: center;
     background-color: #fb4;
 
-    & * {
+    * {
         font-size: 1.2rem;
     }
 
-    & .l-icon {
-        width: 3rem;
-        height: 3rem;
-        margin: auto 1rem;
+    .l-icon {
+        height: 2.4rem;
+        width: 2.4rem;
+        margin-top: 0.4rem;
+        margin-right: 0.5rem;
+        float: left;
+    }
+
+    a {
+        color: #700;
+        &:hover { color: #c00;}
+        &:visited { color: #705;}
     }
 }
