--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -7,10 +7,10 @@
     box-shadow: none;
 
     font-size: 15px;
+    line-height: 133%;
     font-weight: normal;
     font-style: normal;
     font-variant: normal;
-    text-emphasis: none;
     text-align: left;
     text-decoration: none;
     text-transform: none;
