--- a/css/index.css
+++ b/css/index.css
@@ -32,7 +32,7 @@ header
 
     font-size: 4rem;
     margin-left: auto;
-    margin-right: 4rem;
+    /*margin-right: 2rem;*/
     color: white;
 
 }
@@ -60,6 +60,7 @@ header
 #main-nav ul {
     display: flex;
     flex-direction: row;
+    margin-right: 8rem;
     width: 60%;
 }
 
