--- a/css/index.css
+++ b/css/index.css
@@ -1,46 +1,49 @@
-/* body
+body
 {
-    margin:0;
-    overflow: hidden;
+    --background: #29295C;
+    --menu-color: #6261D8;
+    --padding: 1.2em 1.6em;
 }
-header
-{
-    height: 10%;
-    width: 100%;
-    margin: auto;
-    padding: 25px;
-
-} */
 
 #logo {
     display: flex;
     margin-right: auto;
     align-items: center;
+    justify-content: left;
+    width: 1fr;
+}
 
+#goto-cart {
+    display: flex;
+    margin-left: auto;
+    justify-content: space-around;
+    width: 1fr;
+}
 
+#goto-cart a {
+    margin-left: 12px;
+}
+
+.material-icons {
+    font-size: clamp(2rem, 5vw, 4rem);
 }
 
 .material-icons.md-virus {
-
     color: greenyellow;
-    font-size: 4rem;
-    margin-right: auto;
-    margin-top: 1rem;
+    /* font-size: 4rem; */
+    /* margin-top: 1rem; */
 }
 
 .material-icons.md-cart {
-
-    font-size: 4rem;
-    margin-left: auto;
-    margin-right: 4rem;
+    /* font-size: 4rem; */
     color: white;
-
 }
 
 .vstack {
     color: white;
-    font-size: 2.4rem;
+    font-size: clamp(1.2rem, 3vw, 2.4rem);
     margin-left: 5px;
+    margin-right: 12px;
 }
 
 
@@ -53,27 +56,39 @@ header
     /* margin-top: 20px; */
     width: 100%;
     /* height: 100px; */
-    padding: 1.2rem 1.6rem;
-    background-color: #29295C;
+    padding: var(--padding);
+    background-color: var(--background);
 }
 
 #main-nav ul {
     display: flex;
     flex-direction: row;
-    width: 60%;
+    width: 3fr;
+    box-shadow: 0 5px 5px 3px rgba(0, 0, 0, 0.);
+}
+
+#main-nav li {
+    text-align: center;
 }
 
 .menubar {
-    background-color: #6261D8;
-    border-bottom: 4px solid #6261D8;
+    background-color: var(--menu-color);
+    border-bottom: 4px solid var(--menu-color);
     padding: 1.66rem;
+    width: 1fr;
+    /* width: 20%; */
     /* margin: -2px; */
     text-decoration: none;
     color: white;
     /* width: 300px; */
     /* font-family: Arial; */
-    font-size: 1.66rem;
+    /* font-size: 1.66rem; */
+    font-size: clamp(1rem, 2vw, 1.66rem);
     font-weight: 600;
+}
+
+.menubar:last-child {
+    width: 2fr;
 }
 
 .menubar:hover
@@ -84,8 +99,26 @@ header
 {
     background-color: #3B32DC;
 }
-svg
+
+footer {
+    background-color: var(--background);
+    padding: var(--padding);
+    display: flex;
+    justify-content: left;
+}
+
+#copyright {
+    margin-left: auto;
+    margin-right: 50%;
+    transform: translateX(50%);
+}
+
+i.fab
 {
     width: 40px;
     height: 40px;
+}
+
+@media screen and (max-width: 720px) {
+    
 }
