--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,133 @@ body
     --padding: 1.2em 1.6em;
 }
 
+
+
+footer {
+    background-color: var(--background);
+    padding: var(--padding);
+    display: flex;
+    justify-content: left;
+}
+
+#copyright {
+    margin-left: auto;
+    margin-right: 50%;
+    transform: translateX(50%);
+}
+
+i.fab
+{
+    width: 40px;
+    height: 40px;
+}
+
+@media screen and (max-width: 720px) {
+#logo {
+    display: flex;
+    margin-right: auto;
+    align-items: center;
+    justify-content: left;
+    width: 1fr;
+    top: 13%:
+}
+
+#goto-cart {
+    width: 1fr;
+    top: 13%;
+    margin-left: auto;
+}
+
+#goto-cart a {
+    margin-left: 12px;
+}
+
+.material-icons {
+    font-size: clamp(4vw, 6vw, 8vw);
+}
+
+.material-icons.md-virus {
+    color: greenyellow;
+    /* font-size: 4rem; */
+    /* margin-top: 1rem; */
+}
+
+.material-icons.md-cart {
+    /* font-size: 4rem; */
+    color: white;
+}
+
+.vstack {
+    color: white;
+    font-size: clamp(4vw, 6vw, 8vw);
+    margin-left: 5px;
+    margin-right: 12px;
+}
+
+
+#main-nav
+{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    /* margin-top: 20px; */
+    width: 100%;
+    /* height: 100px; */
+    padding: var(--padding);
+    background-color: var(--background);
+
+}
+
+#main-nav ul {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    box-shadow: 0 5px 5px 3px rgba(0, 0, 0, 0.);
+
+}
+
+#main-nav li {
+    text-align: center;
+
+}
+
+.menubar {
+    background-color: var(--menu-color);
+    padding: 1.66rem;
+    width: 1fr;
+    /* width: 20%; */
+    /* margin: -2px; */
+    text-decoration: none;
+    color: white;
+    /* width: 300px; */
+    /* font-family: Arial; */
+    /* font-size: 1.66rem; */
+    font-size: clamp(1rem, 2vw, 1.66rem);
+    font-weight: 600;
+    border-bottom: solid 3px var(--background);
+
+
+}
+
+.menubar:last-child {
+    width: 2fr;
+}
+
+.menubar:hover
+{
+    border-bottom-color: greenyellow;
+}
+.menubar:active
+{
+    background-color: #3B32DC;
+}
+
+    
+}
+
+@media screen and (min-width: 721px) {
 #logo {
     display: flex;
     margin-right: auto;
@@ -100,25 +227,5 @@ body
     background-color: #3B32DC;
 }
 
-footer {
-    background-color: var(--background);
-    padding: var(--padding);
-    display: flex;
-    justify-content: left;
-}
 
-#copyright {
-    margin-left: auto;
-    margin-right: 50%;
-    transform: translateX(50%);
-}
-
-i.fab
-{
-    width: 40px;
-    height: 40px;
-}
-
-@media screen and (max-width: 720px) {
-    
 }
