--- a/css/index.css
+++ b/css/index.css
@@ -34,12 +34,16 @@ i.fab
     justify-content: left;
     width: 1fr;
     top: 13%:
+    flex: 50%;
+    order: 1;
 }
 
 #goto-cart {
     width: 1fr;
     top: 13%;
     margin-left: auto;
+    flex: 50%;
+    order: 2;
 }
 
 #goto-cart a {
@@ -72,7 +76,7 @@ i.fab
 #main-nav
 {
     display: flex;
-    flex-direction: column;
+    flex-wrap:wrap;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -89,6 +93,8 @@ i.fab
     flex-direction: column;
     width: 100%;
     box-shadow: 0 5px 5px 3px rgba(0, 0, 0, 0.);
+    flex: 100%;
+    order: 3;
 
 }
 
@@ -138,6 +144,7 @@ i.fab
     align-items: center;
     justify-content: left;
     width: 1fr;
+
 }
 
 #goto-cart {
