--- a/css/index.css
+++ b/css/index.css
@@ -4,27 +4,25 @@ body
     --menu-color: #6261D8;
     --padding: 0em 1.6em;
     --headerPadding: 1em 1.6em;
+    --textPadding: 2em 6em;
 }
 
-
-
 footer {
-    background-color: var(--background);
-    padding: var(--padding);
-    display: flex;
-    justify-content: left;
-    bottom: 0;
-    position: absolute;
-    width: 100%;
+        background-color: var(--background);
+        padding: var(--padding);
+        display: flex;
+        justify-content: left;
+        bottom: 0;
+        width: 100%;
+
 }
 #special-offer
 {
-    position: fixed;
     width: 100%;
-    height: 20%;
     display: flex;
     flex-direction: row;
-
+    max-height: 150px;
+    order: 1;
 }
 
 #bannerImageDiv
@@ -35,6 +33,7 @@ footer {
 #bannerImage
 {
     flex: 100%;
+    width: 1vw;
 }
 #offer
 {
@@ -42,19 +41,28 @@ footer {
     display: flex;
     flex-direction: column;
     flex: 50%;
+    align-items: center;
 }
-#offerTitle
-{
+
+#offerTitle {
+    margin-top: 2%;
+}
+
+
+#popularProducts {
+    display: flex;
+    flex-wrap:wrap;
+    direction: column;
+    flex: 100%;
+    height: 100%;
+    order: 2;
 
 }
 #copyright {
     display: flex;
     align-items: center;
-    margin-left: auto;
-    margin-right: 50%;
-    transform: translateX(50%);
     color: white;
-
+    margin-left: auto;
 }
 
 i.fab
@@ -65,6 +73,29 @@ i.fab
     height: 40px;
     font-size: 24px;
 }
+.main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background: #cef6fd;
+    bottom: 0;
+}
+#popH1 {
+    text-align: center;
+    padding: var(--textPadding);
+    font-size: 20px;
+    margin-left: 0px;
+    margin-right: 0px;
+    order: 1;
+}
+#popularProdH1 {
+    text-align: center;
+    font-size: 30px;
+    text-decoration: underline 4px;
+    order: 2;
+}
+
 
 @media screen and (max-width: 720px) {
 #logo {
@@ -106,6 +137,7 @@ i.fab
     /* font-size: 4rem; */
     color: white;
 }
+
 
 .vstack {
     color: white;
@@ -163,10 +195,6 @@ i.fab
 
 }
 
-.menubar:last-child {
-    width: 2fr;
-}
-
 .menubar:hover
 {
     border-bottom-color: greenyellow;
@@ -176,7 +204,17 @@ i.fab
     background-color: #3B32DC;
 }
 
-    
+
+
+#popH1 {
+    text-align: center;
+    font-size: 20px;
+    padding-top: 5%;
+}
+
+
+
+
 }
 
 @media screen and (min-width: 721px) {
@@ -264,10 +302,6 @@ i.fab
     font-weight: 600;
 }
 
-.menubar:last-child {
-    width: 2fr;
-}
-
 .menubar:hover
 {
     border-bottom-color: greenyellow;
@@ -276,6 +310,13 @@ i.fab
 {
     background-color: #3B32DC;
 }
+
+
+footer {
+    position: absolute;
+    height: 40px;
+}
+
 
 
 }
