--- a/css/index.css
+++ b/css/index.css
@@ -176,6 +176,10 @@ span {
 .material-icons.md-cart {
     color: var(--on-dark-text-color);
 }
+.material-icons.md-cart:hover {
+    transform: scale(1.3);
+    text-shadow: 0px 0px 3px var(--theme-color);
+}
 
 .vstack {
     color: var(--on-dark-text-color);
@@ -380,14 +384,12 @@ i.fab {
 
     .material-icons.md-menuButton {
     display: flex;
-    color: white;
+        color: var(--on-dark-text-color);
     }
 
     .material-icons.md-menuButton:hover {
     transform: scale(1.4);
-    text-shadow: 3px 2px 5px var(--theme-color);
-
-
+    text-shadow: 0px 0px 3px var(--theme-color);
     }
 
     #logo {
