--- a/css/index.css
+++ b/css/index.css
@@ -232,43 +232,13 @@ footer {
     width: 100%;
 }
 
-.popup {
-    margin: 70px auto;
-    padding: 20px;
-    background: #fff;
-    border-radius: 5px;
-    width: 30%;
-    position: relative;
-    transition: all 5s ease-in-out;
-}
-
-.popup h2 {
-    margin-top: 0;
-    color: #333;
-    font-family: Tahoma, Arial, sans-serif;
-}
-.popup .close {
-    position: absolute;
-    top: 20px;
-    right: 30px;
-    transition: all 200ms;
-    font-size: 30px;
-    font-weight: bold;
-    text-decoration: none;
-    color: #333;
-}
-.popup .close:hover {
-    color: #06D85F;
-}
-.popup .content {
-    max-height: 30%;
-    overflow: auto;
-}
-
-.cartProdImg
+#productPanel
 {
-    width: 150px;
-    height: 150px;
+
+}
+.img-responsive
+{
+
 }
 
 #copyright {
@@ -300,6 +270,21 @@ i.fab {
 {
     display: flex;
     justify-content: right;
+}
+#orderTotal
+{
+    position: relative;
+    right: 10px;
+}
+#orderTotalText
+{
+    position: relative;
+    left: 70%;
+}
+#placeOrderBtn
+{
+    position: relative;
+    right: 10px;
 }
 
 #darkmode-toggle {
